--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,39 @@
     transform: rotate(360deg);
   }
 }
+
+.img-wrapper img{
+  width: 100px;
+  margin-top: -10px;
+}
+
+.btn-wrapper button{
+  background-color: red;
+  
+    border: 0px;
+    padding: 10px;
+    border-radius: 4px;
+    color: white;}
+
+    .cart-wrapper{
+      width: 500px;
+      height: 100px;
+      border: 1px solid gray;
+      border-radius: 4px;
+      margin-left: 10px;
+    }
+
+    .item{
+      float: left;
+      flex-direction: row;
+      /* display: inline-block; */
+      width: 20px;
+      padding: 20px;
+    }
+
+    .add-to-cart img{
+      width: 100px;
+      position: absolute;
+      right: 1%;
+      top: 1px;
+    }
